<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <distributionManagement>
        <snapshotRepository>
            <id>attribyte-private-snapshot</id>
            <name>Attribyte Private Snapshot</name>
            <url>https://maven.pkg.github.com/attribyte/private-repo/</url>
            <uniqueVersion>true</uniqueVersion>
        </snapshotRepository>
        <repository>
            <id>attribyte-private-release</id>
            <name>Attribyte Private Release</name>
            <url>https://maven.pkg.github.com/attribyte/private-repo/</url>
            <uniqueVersion>false</uniqueVersion>
        </repository>
    </distributionManagement>
    <repositories>
        <repository>
            <id>attribyte-private-repo</id>
            <name>Attribyte Private Repo</name>
            <url>https://maven.pkg.github.com/attribyte/private-repo/</url>
        </repository>
    </repositories>
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.attribyte</groupId>
    <artifactId>snook</artifactId>
    <version>0.1.6</version>
    <packaging>jar</packaging>
    <name>Snook HTTP Server Utilities</name>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <jettyVersion>9.4.21.v20190926</jettyVersion>
    </properties>
    <description>
        Utilities and framework for creating and deploying HTTP servers.
    </description>
    <developers>
        <developer>
            <name>Matt Hamer</name>
            <email>matt@attribyte.com</email>
            <organization>Attribyte, LLC</organization>
            <organizationUrl>https://attribyte.com/</organizationUrl>
        </developer>
    </developers>
    <scm>
        <connection>scm:git:git@github.com:attribyte/snook.git</connection>
        <developerConnection>scm:git:git@github.com:attribyte/snook.git</developerConnection>
        <url>git@github.com:attribyte/snook.git</url>
    </scm>
    <dependencies>
        <dependency>
            <groupId>org.attribyte</groupId>
            <artifactId>attribyte-shared-base</artifactId>
            <version>1.0.4</version>
        </dependency>
        <dependency>
            <groupId>org.attribyte</groupId>
            <artifactId>attribyte-http</artifactId>
            <version>0.5.7</version>
        </dependency>
        <dependency>
            <groupId>org.attribyte</groupId>
            <artifactId>essem-metrics</artifactId>
            <version>1.1.1</version>
        </dependency>
        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>29.0-jre</version>
        </dependency>
        <dependency>
            <groupId>org.eclipse.jetty</groupId>
            <artifactId>jetty-server</artifactId>
            <version>${jettyVersion}</version>
        </dependency>
        <dependency>
            <groupId>org.eclipse.jetty</groupId>
            <artifactId>jetty-servlet</artifactId>
            <version>${jettyVersion}</version>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>org.eclipse.jetty</groupId>
            <artifactId>jetty-servlets</artifactId>
            <version>${jettyVersion}</version>
            <optional>true</optional>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>javax.servlet</groupId>
            <artifactId>javax.servlet-api</artifactId>
            <version>3.1.0</version>
        </dependency>
        <dependency>
            <groupId>io.dropwizard.metrics</groupId>
            <artifactId>metrics-core</artifactId>
            <version>4.0.2</version>
        </dependency>
        <dependency>
            <groupId>io.dropwizard.metrics</groupId>
            <artifactId>metrics-servlets</artifactId>
            <version>4.0.2</version>
        </dependency>
        <dependency>
            <groupId>io.dropwizard.metrics</groupId>
            <artifactId>metrics-healthchecks</artifactId>
            <version>4.0.2</version>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-api</artifactId>
            <version>2.13.0</version>
        </dependency>
        <dependency>
            <groupId>org.mindrot</groupId>
            <artifactId>jbcrypt</artifactId>
            <version>0.4</version>
        </dependency>
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>2.8.6</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>io.nayuki</groupId>
            <artifactId>qrcodegen</artifactId>
            <version>1.5.0</version>
        </dependency>
        <dependency>
            <groupId>com.eatthepath</groupId>
            <artifactId>java-otp</artifactId>
            <version>0.2.0</version>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.12</version>
            <scope>test</scope>
        </dependency>
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.7.0</version>
                <configuration>
                    <showWarnings>true</showWarnings>
                    <showDeprecation>true</showDeprecation>
                    <compilerArgument>-Xlint:all</compilerArgument>
                    <source>1.8</source>
                    <target>1.8</target>
                    <fork>true</fork>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-deploy-plugin</artifactId>
                <version>3.0.0-M1</version>
                <executions>
                    <execution>
                        <id>default-deploy</id>
                        <phase>deploy</phase>
                        <goals>
                            <goal>deploy</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
